# google-cloud-cop

./: .cmake-format.py  .gitignore  CMakeLists.txt  Makefile  README.md
graph/: build_graph.dot
protos/: CMakeLists.txt  message_generator.proto
protos/message_generator/: message_generator.proto
scripts/: clean.sh  generate-build-graph.sh
src/: CMakeLists.txt  main.cc
